fix: removed overflow in x axis

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    overflow-x: hidden;
   }
 
 /* ****************          NAVBAR STYLES         ********************** */
